[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scenes/world/WorldScene.gd" id="1_script"]

[node name="WorldScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="TitleLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "THE SANCTUARY"
horizontal_alignment = 1

[node name="PlayerInfoLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Name | Archetype | Vow"
horizontal_alignment = 1

[node name="GreetingLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = ""
horizontal_alignment = 1

[node name="HSeparator1" type="HSeparator" parent="CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="StationsLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Choose a Station:"
horizontal_alignment = 1

[node name="StationsContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="StoneButton" type="Button" parent="CenterContainer/VBoxContainer/StationsContainer"]
custom_minimum_size = Vector2(120, 60)
layout_mode = 2
text = "The Stone
(Discipline)"

[node name="MirrorButton" type="Button" parent="CenterContainer/VBoxContainer/StationsContainer"]
custom_minimum_size = Vector2(120, 60)
layout_mode = 2
text = "The Mirror
(Clarity)"

[node name="GateButton" type="Button" parent="CenterContainer/VBoxContainer/StationsContainer"]
custom_minimum_size = Vector2(120, 60)
layout_mode = 2
text = "The Gate
(Courage)"

[node name="HSeparator2" type="HSeparator" parent="CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="WorldLogPanel" type="PanelContainer" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(400, 120)
layout_mode = 2

[node name="LogVBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer/WorldLogPanel"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="LogTitleLabel" type="Label" parent="CenterContainer/VBoxContainer/WorldLogPanel/LogVBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "World Log:"

[node name="LogTextLabel" type="Label" parent="CenterContainer/VBoxContainer/WorldLogPanel/LogVBoxContainer"]
layout_mode = 2
text = "No interactions yet."
autowrap_mode = 2

[node name="VisitCountLabel" type="Label" parent="CenterContainer/VBoxContainer/WorldLogPanel/LogVBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Visits - Stone: 0 | Mirror: 0 | Gate: 0"

[node name="HSeparator3" type="HSeparator" parent="CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="ProceedButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
disabled = true
text = "Cross the Gate (Coming Soon)"
